<resources>
    <string name="app_name">EnLight</string>
    <string name="title_of_fragment">Hello World</string>
    <string name="lightNameLabel">Name:</string>
    <string name="powerSwitchLabel">Power</string>
    <string name="brightnessLabel">brightness</string>
    <string name="tile_color_button_label">Color</string>
    <string name="locationNameLabel">Location</string>
    <string name="groupNameLabel">Group</string>
</resources>
