<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lightNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lightNameLabel"
                android:layout_gravity="center_vertical"
                tools:text="xxxxx" />

            <EditText
                android:id="@+id/lightName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType=""
                android:maxLength="32"
                android:layout_gravity="center_vertical"
                tools:text="Bedroom" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/locationNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locationNameLabel"
                android:layout_gravity="center_vertical"
                tools:text="xxxxx" />

            <TextView
                android:id="@+id/locationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                tools:text="Bedroom" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/groupNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groupNameLabel"
                android:layout_gravity="center_vertical"
                tools:text="xxxxx" />

            <TextView
                android:id="@+id/groupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                tools:text="Bedroom" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/powerSwitchLabel"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/powerSwitchLabel" />

            <CheckBox
                android:id="@+id/powerSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/brightnessLabel"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightnessLabel" />

            <SeekBar
                android:id="@+id/brightnessBar"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>